<resources>
    <string name="app_name">Duolingo-Lite(German)</string>
    <string name="image_description">Image of content reference</string>
    <string name="family_members">Family Members</string>
    <string name="body_parts">Body Parts</string>
    <string name="colours">Colours</string>
    <string name="phrases">Phrases</string>
    <string name="numbers">Numbers</string>
    <string name="hello">hello</string>
    <string name="app_name1">app name</string>
</resources>